Rebrand the blog to Sharpen the Saws
commit 71773fb6d85e01a487f91df457b69ca087f70994
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 07:17:29 2023 -0700

    Add Lincoln quote

commit b57fee79e70d6030526e7894db1404c0199a1c9e
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:59:07 2023 -0700

    Don't commit originals & medium versions of images

commit eb31a21e0294326bf48318ba21f997a8d4e5d220
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:58:20 2023 -0700

    Make dev environment accessible from local network

commit d70a168f879b23c3729927136774c137b0f95802
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:58:07 2023 -0700

    Switch to grid view

commit ce24eea324c4f3d9583b8b7cde98e952149d2548
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:57:44 2023 -0700

    Add header image

commit 6183786f39af4e57eee191e76151d5a6d50dabc9
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:56:41 2023 -0700

    Switch to grid & add header image

commit 23077562739b3803e55d2b648459cc58e9390288
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:52:04 2023 -0700

    Change title and description + exclude Dockerfile

commit 717a68e5b4b36da127e089e033136c67867d6c29
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:46:58 2023 -0700

    Add teaser images to existing posts

commit b9b7e72a88bd2097992e4710a7daddb091c701a2
Author: Ant <anthony.hillairet@gmail.com>
Date:   Mon Jul 17 06:45:47 2023 -0700

    Fix image filename to new standard

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
 author_profile: true
+entries_layout: grid
+classes: wide
+header:
+  image: /assets/images/headers/2023-07-1211169001-istock_saws-sharpened.jpg
+  image_description: "SAWS SHARPENED signs mounted on exterior wood building"
+  caption: "Photo credit: [**iStock**](https://istock.com)"
 ---
